@@ -169,6 +169,7 @@ AC_SUBST([MOZILLA_FLAVOUR])
 AC_SUBST([MOZILLA_INCLUDE_ROOT])
 AC_SUBST([MOZILLA_HOME])
 AC_SUBST([MOZILLA_PREFIX])
+AC_SUBST([MOZILLA_EXTRA_LIBS])
 
 case "$MOZILLA" in
 mozilla) min_version=1.7.9 ;;
