@@ -1,3 +1,11 @@
+2006-02-08  Christian Persch  <chpe@cvs.gnome.org>
+
+	* configure.ac:
+	* m4/gecko.m4:
+	* src/Makefile.am:
+
+	Also build with ff trunk, by explicitly linking with -lxul.
+
 2006-02-07  Crispin Flowerday  <gnome@flowerday.cx>
 
 	* src/ephy-extensions-manager.c: (load_extension),
